- Device::enumerateDevices now returns a Device with both a vk::PhysicalDevice and vk::Device on it - QueueFamilies on the logical device prefers that graphics queue and present queue are two different hardware queues - Device::createSurface is implemented - a Win32 window is now created in main()

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -165,12 +165,14 @@
     <ClInclude Include="src\shader.hpp" />
     <ClInclude Include="src\standard_header.hpp" />
     <ClInclude Include="src\sub_command_buffer.hpp" />
+    <ClInclude Include="src\surface.hpp" />
     <ClInclude Include="src\swap_chain.hpp" />
     <ClInclude Include="src\vertex_shader.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\device.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\surface.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
