--- a/papago-api-core/papago-api-core.vcxproj.filters
+++ b/papago-api-core/papago-api-core.vcxproj.filters
@@ -54,12 +54,18 @@
     <ClInclude Include="src\vertex_shader.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\surface.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\device.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\surface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
