- SwapChain can now be created (it includes images and views)

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="src\fragment_shader.hpp" />
     <ClInclude Include="src\graphics_queue.hpp" />
     <ClInclude Include="src\image_resource.hpp" />
+    <ClInclude Include="src\render_pass.hpp" />
     <ClInclude Include="src\resource.hpp" />
     <ClInclude Include="src\shader.hpp" />
     <ClInclude Include="src\standard_header.hpp" />
@@ -173,6 +174,7 @@
     <ClCompile Include="src\device.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\surface.cpp" />
+    <ClCompile Include="src\swap_chain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
