Did a major refactorization of the program

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="src\image_resource.hpp" />
     <ClInclude Include="src\render_pass.hpp" />
     <ClInclude Include="src\resource.hpp" />
+    <ClInclude Include="src\sampler.hpp" />
     <ClInclude Include="src\shader.hpp" />
     <ClInclude Include="src\standard_header.hpp" />
     <ClInclude Include="src\sub_command_buffer.hpp" />
@@ -171,7 +172,9 @@
     <ClInclude Include="src\vertex_shader.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\buffer_resource.cpp" />
     <ClCompile Include="src\device.cpp" />
+    <ClCompile Include="src\image_resource.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\surface.cpp" />
     <ClCompile Include="src\swap_chain.cpp" />
