- Changed std::for_each to for(a : b) - SwapchainKHR was destroyed too early - fixed now - changed a std::runtime_error to PAPAGO_ERROR - de-snaked a bit of code

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -113,6 +113,7 @@
       <AdditionalIncludeDirectories>$(VulkanSDKDir)\include;$(ProjectDir)include</AdditionalIncludeDirectories>
       <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>standard_header.hpp</PrecompiledHeaderFile>
+      <PreprocessorDefinitions>PAPAGO_USE_VALIDATION_LAYERS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link />
     <Link>
