- RenderPass can now be created with an underlying vulkan RenderPass and vulkan PSO. - A shaderModule is dying somewhere, will find.
Co-authored-by: Brandborg<alexander.brandborg@hotmail.com>

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="src\fragment_shader.cpp" />
     <ClCompile Include="src\image_resource.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\render_pass.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\surface.cpp" />
     <ClCompile Include="src\swap_chain.cpp" />
