--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -177,12 +177,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\buffer_resource.cpp" />
+    <ClCompile Include="src\command_buffer.cpp" />
     <ClCompile Include="src\device.cpp" />
     <ClCompile Include="src\fragment_shader.cpp" />
+    <ClCompile Include="src\graphics_queue.cpp" />
     <ClCompile Include="src\image_resource.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\sampler.cpp" />
-	<ClCompile Include="src\render_pass.cpp" />
+    <ClCompile Include="src\render_pass.cpp" />
     <ClCompile Include="src\resource.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\surface.cpp" />
