--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -121,7 +121,8 @@
       <AdditionalDependencies>vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>./shader/compile.bat</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -170,6 +171,7 @@
     <ClInclude Include="src\resource.hpp" />
     <ClInclude Include="src\sampler.hpp" />
     <ClInclude Include="src\shader.hpp" />
+    <ClInclude Include="src\shader_program.h" />
     <ClInclude Include="src\standard_header.hpp" />
     <ClInclude Include="src\sub_command_buffer.hpp" />
     <ClInclude Include="src\surface.hpp" />
@@ -189,6 +191,7 @@
     <ClCompile Include="src\render_pass.cpp" />
     <ClCompile Include="src\resource.cpp" />
     <ClCompile Include="src\shader.cpp" />
+    <ClCompile Include="src\shader_program.cpp" />
     <ClCompile Include="src\surface.cpp" />
     <ClCompile Include="src\swap_chain.cpp" />
     <ClCompile Include="src\vertex_shader.cpp" />
