Vertex Buffer is no longer hardcoded
Vertex buffer implemented

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="src\sub_command_buffer.hpp" />
     <ClInclude Include="src\surface.hpp" />
     <ClInclude Include="src\swap_chain.hpp" />
+    <ClInclude Include="src\vertex.hpp" />
     <ClInclude Include="src\vertex_shader.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -189,6 +190,7 @@
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\surface.cpp" />
     <ClCompile Include="src\swap_chain.cpp" />
+    <ClCompile Include="src\vertex.cpp" />
     <ClCompile Include="src\vertex_shader.cpp" />
   </ItemGroup>
   <ItemGroup>
