--- a/papago-api-core/papago-api-core.vcxproj.filters
+++ b/papago-api-core/papago-api-core.vcxproj.filters
@@ -130,5 +130,11 @@
     <None Include="shader\shader.vert">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="shader\textureFrag.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="shader\textureVert.vert">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
