- Textures can now be loaded and bound! (they're upside down, though) - Removed compile.bat from solution (as we compile dynamically anyway) - Added fileMover.bat (exec from post-build event) which moves .frag, .vert and .jpg files into exe-folder (in appropriate subfolders) - Added some internal state to our Device (a CommandBuffer and a vk::Queue) so GPU commands can be run from Device - setUniform(name, image, sampler) is now back on CommandBuffer (was briefly on RenderPass) - ImageResource now overrides Resource::upload(data) (images requires a staging buffer)
Co-authored-by: Brandborg <alexander.brandborg@hotmail.com>

--- a/papago-api-core/papago-api-core.vcxproj.filters
+++ b/papago-api-core/papago-api-core.vcxproj.filters
@@ -121,9 +121,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shader\compile.bat">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="shader\shader.frag">
       <Filter>Resource Files</Filter>
     </None>
@@ -134,6 +131,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="shader\textureVert.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="fileMover.bat">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
