--- a/papago-api-core/papago-api-core.vcxproj.filters
+++ b/papago-api-core/papago-api-core.vcxproj.filters
@@ -65,6 +65,7 @@
     </ClInclude>
     <ClInclude Include="src\vertex.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="src\parser.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -117,6 +118,7 @@
     </ClCompile>
     <ClCompile Include="src\vertex.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\parser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
