- Rave-party! - New shaders mixing texture and color - CullMode is now eFront (so front face matches the order of the vertices)
Co-authored-by: Brandborg <alexander.brandborg@hotmail.com>

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -202,6 +202,8 @@
     <None Include="fileMover.bat" />
     <None Include="shader\shader.frag" />
     <None Include="shader\shader.vert" />
+    <None Include="shader\stupidFrag.frag" />
+    <None Include="shader\stupidVert.vert" />
     <None Include="shader\textureFrag.frag" />
     <None Include="shader\textureVert.vert" />
     <None Include="shader\uniformFrag.frag" />
