- Moved old main code into separate function ( oldMain() ). Kept for reference. - Added color shaders (takes only vertex buffer input) - createDummyRenderPass is now on device (prev on RenderPass) - Fence synch is now also on ImageResource - Added a new CommandBuffer::begin method which takes a render target as parameter (should not render to screen - NOT TESTED) - Added createFramebuffer to ImageResource
Co-authored-by: Brandborg <alexander.brandborg@hotmail.com>

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -199,6 +199,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="fileMover.bat" />
+    <None Include="shader\colorFrag.frag" />
+    <None Include="shader\colorVert.vert" />
     <None Include="shader\shader.frag" />
     <None Include="shader\shader.vert" />
     <None Include="shader\stupidFrag.frag" />
