--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -151,6 +151,7 @@
       <AdditionalIncludeDirectories>$(VulkanSDKDir)\include;$(ProjectDir)include</AdditionalIncludeDirectories>
       <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>standard_header.hpp</PrecompiledHeaderFile>
+      <PreprocessorDefinitions>PAPAGO_USE_VALIDATION_LAYERS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
