Added the command buffer interface

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -162,6 +162,7 @@
   <ItemGroup>
     <ClInclude Include="include\common.hpp" />
     <ClInclude Include="include\ibuffer_resource.hpp" />
+    <ClInclude Include="include\icommand_buffer.hpp" />
     <ClInclude Include="include\idevice.hpp" />
     <ClInclude Include="include\iimage_resource.hpp" />
     <ClInclude Include="include\isampler.hpp" />
