--- a/papago-api-core/papago-api-core.vcxproj.filters
+++ b/papago-api-core/papago-api-core.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="include\iimage_resource.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\icommand_buffer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\device.cpp">
