Renders a 3D grid of cubes (single threaded): - Added thread_pool.h  (from prev project) to client project (not used yet) - Added FPS / Frame time timings to client main loop - Added timing info displaying once a second in window title
Restructured RecordingCommandBuffer:
- It is now possible to define shared functionality between CommandBuffer and SubCommandBuffer in a single class
- TODO: explain the new structure on wiki

General fixing:
- renamed shader_program.h to .hpp
- removed all friend classes (and made required private fields/methods public)
- removed some unneeded includes
- removed some old method definitions in command buffer headers

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,6 @@ __pycache__/
 *.spv
 papago-api-core/lastFrame.png
 papago-api-core/passOneTarget.png
+papago-api-client/renderDocThingie.cap
+papago-api-client/passOneTarget.png
+papago-api-client/passOneColourTarget.png
