Compiles, but has runtime error: Color attachments on renderpass used to create SwapChain and renderpass used by CommandBuffer::begin(...) have different format. - Added image_resource.impl for template specialization. TODO: use similar naming for other specializations

--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -236,6 +236,7 @@
     <None Include="shader\textureVert.vert" />
     <None Include="shader\uniformFrag.frag" />
     <None Include="shader\uniformVert.vert" />
+    <None Include="src\image_resource.impl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
