--- a/papago-api-core/papago-api-core.vcxproj.filters
+++ b/papago-api-core/papago-api-core.vcxproj.filters
@@ -155,7 +155,7 @@
     <ClCompile Include="src\shader_program.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-	<ClCompile Include="src\api_enums.cpp">
+    <ClCompile Include="src\api_enums.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\sub_command_buffer.cpp">
@@ -199,5 +199,6 @@
     <None Include="shader\colorFrag.frag">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="src\image_resource.impl" />
   </ItemGroup>
 </Project>
