--- a/papago-user-test/papago-user-test.vcxproj
+++ b/papago-user-test/papago-user-test.vcxproj
@@ -87,6 +87,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>papago-api-core.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -94,6 +97,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>papago-api-core.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -106,6 +112,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>papago-api-core.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -119,14 +126,25 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>papago-api-core.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\papago-api-client\papago-api-client.vcxproj">
-      <Project>{9a352b4a-1337-49f3-a395-b834bfef96c3}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+    <ClInclude Include="external\papago\api_enums.hpp" />
+    <ClInclude Include="external\papago\common.hpp" />
+    <ClInclude Include="external\papago\ibuffer_resource.hpp" />
+    <ClInclude Include="external\papago\icommand_buffer.hpp" />
+    <ClInclude Include="external\papago\idevice.hpp" />
+    <ClInclude Include="external\papago\igraphics_queue.hpp" />
+    <ClInclude Include="external\papago\iimage_resource.hpp" />
+    <ClInclude Include="external\papago\irender_pass.hpp" />
+    <ClInclude Include="external\papago\isampler.hpp" />
+    <ClInclude Include="external\papago\ishader.hpp" />
+    <ClInclude Include="external\papago\ishader_program.hpp" />
+    <ClInclude Include="external\papago\isurface.hpp" />
+    <ClInclude Include="external\papago\iswapchain.hpp" />
+    <ClInclude Include="external\papago\papago.hpp" />
+    <ClInclude Include="external\papago\parser.hpp" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
