--- a/papago-user-test/papago-user-test.vcxproj.filters
+++ b/papago-user-test/papago-user-test.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClInclude Include="external\papago\parser.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="thread_pool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
