--- a/papago-user-test/papago-user-test.vcxproj
+++ b/papago-user-test/papago-user-test.vcxproj
@@ -154,11 +154,13 @@
     <ClInclude Include="external\papago\papago.hpp" />
     <ClInclude Include="external\papago\parser.hpp" />
     <ClInclude Include="mesh.h" />
+    <ClInclude Include="test.h" />
     <ClInclude Include="thread_pool.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
