- no build errors
Co-authored-by: Brandborg <alexander.brandborg@hotmail.com>

--- a/papago-api-core/papago-api-core.vcxproj.filters
+++ b/papago-api-core/papago-api-core.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClInclude Include="include\parser.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\iparameter_block.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\parameter_block.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\device.cpp">
@@ -165,6 +171,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\recording_command_buffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\parameter_block.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
