--- a/papago-api-core/papago-api-core.vcxproj
+++ b/papago-api-core/papago-api-core.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="include\idevice.hpp" />
     <ClInclude Include="include\igraphics_queue.hpp" />
     <ClInclude Include="include\iimage_resource.hpp" />
+    <ClInclude Include="include\iparameter_block.hpp" />
     <ClInclude Include="include\irender_pass.hpp" />
     <ClInclude Include="include\isampler.hpp" />
     <ClInclude Include="include\ishader.hpp" />
@@ -202,6 +203,7 @@
     <ClInclude Include="src\fragment_shader.hpp" />
     <ClInclude Include="src\graphics_queue.hpp" />
     <ClInclude Include="src\image_resource.hpp" />
+    <ClInclude Include="src\parameter_block.hpp" />
     <ClInclude Include="src\recording_command_buffer.hpp" />
     <ClInclude Include="src\render_pass.hpp" />
     <ClInclude Include="src\resource.hpp" />
@@ -222,6 +224,7 @@
     <ClCompile Include="src\fragment_shader.cpp" />
     <ClCompile Include="src\graphics_queue.cpp" />
     <ClCompile Include="src\image_resource.cpp" />
+    <ClCompile Include="src\parameter_block.cpp" />
     <ClCompile Include="src\parser.cpp" />
     <ClCompile Include="src\recording_command_buffer.cpp" />
     <ClCompile Include="src\sampler.cpp" />
