--- a/Papago-benchmark/Papago-benchmark.vcxproj.filters
+++ b/Papago-benchmark/Papago-benchmark.vcxproj.filters
@@ -47,6 +47,12 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VertexSkull.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IndexSkull.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\mvpTexShader.frag" />
