--- a/Papago-benchmark/Papago-benchmark.vcxproj.filters
+++ b/Papago-benchmark/Papago-benchmark.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="IndexSkull.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sphere.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\mvpTexShader.frag" />
