- GraphicsQueue:::submitPresent(...) made (not much gaine, though) - Added IndexCube and VertexCube

--- a/Papago-benchmark/Papago-benchmark.vcxproj
+++ b/Papago-benchmark/Papago-benchmark.vcxproj
@@ -153,12 +153,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="IndexCube.hpp" />
     <ClInclude Include="IndexSkull.h" />
     <ClInclude Include="RenderObject.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="test_config.hpp" />
     <ClInclude Include="thread_pool.h" />
+    <ClInclude Include="VertexCube.hpp" />
     <ClInclude Include="VertexSkull.h" />
     <ClInclude Include="wmi_accessor.hpp" />
   </ItemGroup>
