--- a/Papago-benchmark/Papago-benchmark.vcxproj.filters
+++ b/Papago-benchmark/Papago-benchmark.vcxproj.filters
@@ -56,6 +56,12 @@
     <ClInclude Include="Sphere.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IndexCube.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexCube.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\mvpTexShader.frag" />
